[metadata]
name = rxjson
version=0.1
description=JSON RX Schema validation tool.
description-file=
    README
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Topic :: Utilities
keywords=
    json
    schema
    validation
    rx
    rxjson

[files]
packages = rxjson

